Exercícios de Flex-Box

--- a/responsividade/media-query.html
+++ b/responsividade/media-query.html
@@ -10,10 +10,13 @@
 </head>
 <body>
     <img src="https://s2.glbimg.com/qKdBxtKQzegLUkyBW9GMbyl1JUU=/e.glbimg.com/og/ed/f/original/2018/08/31/extra_large-1535536443-cover-image.jpg" alt="galaxia" class="img-content">
+    <h1 class="title-content">Título 1</h1>
     <p class="text-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, vitae doloribus eius corrupti saepe quas asperiores. Totam a velit neque. Nobis sint id repellendus autem tempora nesciunt voluptatibus consequuntur ipsam.</p>
     <img src="https://s2.glbimg.com/qKdBxtKQzegLUkyBW9GMbyl1JUU=/e.glbimg.com/og/ed/f/original/2018/08/31/extra_large-1535536443-cover-image.jpg" alt="galaxia" class="img-content">
+    <h1 class="title-content">Título 2</h1>
     <p class="text-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci dolorem modi asperiores facere temporibus tempore explicabo labore in, possimus odit alias deleniti at molestias, natus id aperiam blanditiis iste eaque.</p>
     <img src="https://s2.glbimg.com/qKdBxtKQzegLUkyBW9GMbyl1JUU=/e.glbimg.com/og/ed/f/original/2018/08/31/extra_large-1535536443-cover-image.jpg" alt="galaxia" class="img-content">
+    <h1 class="title-content">Título 3</h1>
     <p class="text-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. At quisquam dicta voluptas sunt, architecto excepturi vero velit necessitatibus aliquid. Soluta, libero ratione tempore voluptatum dolores non laborum delectus ut qui.</p>
 </body>
 </html>
