--- a/flex-container/layout-teste/index.html
+++ b/flex-container/layout-teste/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
    <div class="container">
-    <div class="item">Item 1</div>
-    <div class="item">Item 2</div>
-    <div class="item">Item 3</div>
+    <div class="item item1">Item 1</div>
+    <div class="item item2">Item 2</div>
+    <div class="item item3">Item 3</div>
    </div>  
 </body>
 </html>
